@@ -4,67 +4,46 @@ description = 'Trellis Application'
 
 ext {
     moduleName = 'org.trellisldp.app'
+    testModules = ['org.trellisldp.file', 'org.trellisldp.constraint',
+                   'org.trellisldp.agent', 'org.trellisldp.audit',
+                   'org.trellisldp.io', 'org.trellisldp.rdfa', 'smallrye.config']
 }
 
 dependencies {
-    api("io.dropwizard:dropwizard-core:$dropwizardVersion")
     api project(':trellis-api')
     api project(':trellis-http')
 
-    implementation("javax.xml.bind:jaxb-api:$jaxbVersion")
-    implementation("javax.validation:validation-api:2.0.1.Final")
-    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
     implementation("org.eclipse.microprofile.config:microprofile-config-api:$microprofileConfigVersion")
-    implementation("org.slf4j:slf4j-api:$slf4jVersion")
+    implementation("javax.enterprise:cdi-api:$cdiApiVersion")
     implementation project(':trellis-vocabulary')
-    implementation project(':trellis-agent')
-    implementation project(':trellis-audit')
-    implementation project(':trellis-webac')
-    implementation project(':trellis-auth-basic')
-    implementation project(':trellis-auth-oauth')
 
     testRuntime("javax.activation:javax.activation-api:$activationApiVersion")
 
+    testImplementation("org.slf4j:slf4j-api:$slf4jVersion")
     testImplementation("ch.qos.logback:logback-classic:$logbackVersion")
     testImplementation("io.smallrye:smallrye-config:$smallryeVersion")
-    testImplementation("javax.enterprise:cdi-api:$cdiApiVersion")
-    testImplementation("org.hamcrest:hamcrest:$hamcrestVersion")
-    testImplementation("org.apache.commons:commons-rdf-jena:$commonsRdfVersion") {
-        exclude group: 'org.apache.jena', module: 'jena-osgi'
-        exclude group: 'org.apache.servicemix.bundles', module: 'org.apache.servicemix.bundles.xerces'
+    testImplementation("org.jboss.weld:weld-junit5:$weldVersion") {
+        exclude group: "org.jboss.spec.javax.interceptor", module: "jboss-interceptors-api_1.2_spec"
+        exclude group: "org.jboss.spec.javax.el", module: "jboss-el-api_3.0_spec"
     }
-    testImplementation("org.apache.jena:jena-arq:$jenaVersion")
-    testImplementation("org.apache.jena:jena-rdfconnection:$jenaVersion")
-    testImplementation("org.awaitility:awaitility:$awaitilityVersion") {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
-        exclude group: 'org.hamcrest', module: 'hamcrest-library'
-    }
-    testImplementation("org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion")
-    testImplementation("org.mockito:mockito-core:$mockitoVersion")
+
     testImplementation project(':trellis-triplestore')
     testImplementation project(':trellis-constraint-rules')
     testImplementation project(':trellis-io-jena')
     testImplementation project(':trellis-file')
     testImplementation project(':trellis-rdfa')
-    testImplementation("io.dropwizard:dropwizard-client:$dropwizardVersion")
-    testImplementation("io.dropwizard:dropwizard-testing:$dropwizardVersion") {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
-    }
-    testImplementation("org.jboss.weld:weld-junit5:$weldVersion") {
-        exclude group: "org.jboss.spec.javax.interceptor", module: "jboss-interceptors-api_1.2_spec"
-        exclude group: "org.jboss.spec.javax.el", module: "jboss-el-api_3.0_spec"
-    }
+    testImplementation project(':trellis-agent')
+    testImplementation project(':trellis-audit')
 }
 
-jar {
-    manifest {
-        attributes('Automatic-Module-Name': moduleName)
-    }
-}
-
-java {
-    // because this isn't built as a JPMS module
-    if (project.hasProperty("jpms") && JavaVersion.current().isJava11Compatible()) {
-        disableAutoTargetJvm()
+if (project.sourceCompatibility.isJava11Compatible()) {
+    test {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            jvmArgs += [
+                '--add-opens', "org.trellisldp.api/org.trellisldp.api=weld.core.impl",
+                '--add-opens', "org.trellisldp.http/org.trellisldp.http.core=weld.core.impl"
+            ]
+        }
     }
 }
